iptables_4g
# Generated by iptables-save v1.4.21 on Wed Nov 18 20:00:15 2015
*nat
:PREROUTING ACCEPT [10:1807]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Wed Nov 18 20:00:15 2015
# Generated by iptables-save v1.4.21 on Wed Nov 18 20:00:15 2015
*filter
:INPUT DROP [10:1807]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [98:11816]
-A INPUT -i wlan0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 5002 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 1450 -j ACCEPT
-A INPUT -s 10.234.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 1573 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 1573 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 1573 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth1 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Nov 18 20:00:15 2015
